<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abnormal_behavior_detector</name>
  <version>1.0.0</version>
  <description>이상 거동 검출 노드 - 원형 교차로에서 역주행 등 이상 행동을 하는 차량 검출</description>

  <maintainer email="msmw1023@chosun.kr">Minsoo Kim</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Message dependencies -->
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Autoware dependencies -->
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_debug_msgs</depend>

  <!-- Lanelet2 dependencies -->
  <depend>lanelet2_core</depend>
  <depend>lanelet2_extension</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>

  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
